--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -190,6 +190,7 @@
 /extensions/quick-open-project                       @zerowidth
 /extensions/quick-search                             @iwfan
 /extensions/quick-surf                               @CheatGZ
+/extensions/quicktime                                @pradeepb28
 /extensions/radix                                    @peduarte
 /extensions/railway                                  @coffee-cup
 /extensions/raindrop                                 @lardissone
