--- a/extensions/google-translate/package.json
+++ b/extensions/google-translate/package.json
@@ -4,7 +4,7 @@
   "title": "Google Translate",
   "description": "Simple translation using Google Translate",
   "icon": "google-translate.png",
-  "author": "ospfranco",
+  "author": "gebeto",
   "contributors": [
     "FezVrasta"
   ],
@@ -13,6 +13,13 @@
     {
       "name": "translate",
       "title": "Translate",
+      "subtitle": "Google Translate",
+      "description": "Simple translation via Google Translate",
+      "mode": "view"
+    },
+    {
+      "name": "translate-form",
+      "title": "Translate Form",
       "subtitle": "Google Translate",
       "description": "Simple translation via Google Translate",
       "mode": "view"
@@ -906,7 +913,9 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.25.1",
-    "@vitalets/google-translate-api": "^7.0.0"
+    "@types/debounce": "^1.2.1",
+    "@vitalets/google-translate-api": "^7.0.0",
+    "debounce": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
