--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -258,7 +258,7 @@
 /extensions/twitter-trendscast                       @pradeepb28
 /extensions/two-factor-authentication-code-generator @cjdenio
 /extensions/ulysses                                  @praveenjuge
-/extensions/unicode-symbols                          @mmazzarolo
+/extensions/unicode-symbols                          @mmazzarolo @FezVrasta
 /extensions/unix-timestamp                           @Destiner
 /extensions/unsplash                                 @eggsy
 /extensions/url-tools                                @joshauh46
