--- a/extensions/visual-studio-code-project-manager/package.json
+++ b/extensions/visual-studio-code-project-manager/package.json
@@ -48,6 +48,24 @@
       "default": "/Applications/Fork.app",
       "title": "Git client app path",
       "description": "Path to the Git client app"
+    },
+    {
+      "name": "build",
+      "type": "dropdown",
+      "required": false,
+      "title": "Build",
+      "default": "Code",
+      "description": "Select which build of Visual Studio Code to use",
+      "data": [
+        {
+          "value": "Code",
+          "title": "Visual Studio Code"
+        },
+        {
+          "value": "Code - Insiders",
+          "title": "Visual Studio Code - Insiders"
+        }
+      ]
     }
   ],
   "dependencies": {
