--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -141,7 +141,14 @@
       "name": "switches",
       "title": "Switches",
       "subtitle": "Home Assistant",
-      "description": "Get/Set states of Home Assistant switches",
+      "description": "Get/Set states of Home Assistant Switches",
+      "mode": "view"
+    },
+    {
+      "name": "helpers",
+      "title": "Helpers",
+      "subtitle": "Home Assistant",
+      "description": "Get/Set states of Home Assistant Helpers",
       "mode": "view"
     }
   ],
@@ -180,10 +187,22 @@
       "default": false,
       "title": "Style",
       "description": "Show Entity IDs as subtitle"
+    },
+    {
+      "name": "camerarefreshinterval",
+      "type": "textfield",
+      "required": false,
+      "default": "3000",
+      "title": "Camera Refresh Interval (ms)",
+      "description": "Refresh interval in ms for camera streams. Values < 2000 are not recommended. 0 mean no auto refresh at all",
+      "placeholder": "3000"
     }
   ],
+  "categories": [
+    "Other"
+  ],
   "dependencies": {
-    "@raycast/api": "^1.26.0",
+    "@raycast/api": "^1.31.0",
     "home-assistant-js-websocket": "^5.11.1",
     "node-fetch": "^2.6.1",
     "open": "^8.3.0",
