fix: unable to select source branch and target branch from create mer… (#1282)
* fix: unable to select source branch and target branch from create merge request

* chore: add contributor name

--- a/extensions/gitlab/package.json
+++ b/extensions/gitlab/package.json
@@ -157,7 +157,8 @@
     }
   ],
   "contributors": [
-    "Loskir"
+    "Loskir",
+    "immint023"
   ],
   "dependencies": {
     "@apollo/client": "^3.4.8",
