--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -200,6 +200,7 @@
 /extensions/random-email                             @rkjaer
 /extensions/ray-so                                   @gt-codes @RSO
 /extensions/raynab                                   @gogocharli
+/extensions/readwise                                 @natterstefan
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
 /extensions/remove-background                        @maantje @FezVrasta
