--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -131,6 +131,7 @@
 /extensions/json-format                              @Destiner
 /extensions/json-to-go                               @chyroc
 /extensions/json2ts                                  @gon250
+/extensions/justwatch-search                         @RishabSwift
 /extensions/kaalam                                   @heertheeswaran
 /extensions/kagi-search                              @fearoffish
 /extensions/kaomoji-search                           @allexks
