--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -171,6 +171,7 @@
 /extensions/notion                                   @HenriChabrand
 /extensions/nsis-reference                           @idleberg
 /extensions/obsidian                                 @marcjulianschwarz
+/extensions/office-quotes                            @braydoncoyer
 /extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
