chore(google-translate): update lang name & flag (#1145)
* chore(google-translate): update lang name & flag

Signed-off-by: Jie Peng <im@jiepeng.me>

* chore: update CHANGELOG

Signed-off-by: Jie Peng <im@jiepeng.me>

* chore(package.json): add categories field

Signed-off-by: Jie Peng <im@jiepeng.me>

--- a/extensions/google-translate/package.json
+++ b/extensions/google-translate/package.json
@@ -5,6 +5,10 @@
   "description": "Simple translation using Google Translate",
   "icon": "google-translate.png",
   "author": "gebeto",
+  "categories": [
+    "Web",
+    "Productivity"
+  ],
   "contributors": [
     "FezVrasta"
   ],
@@ -90,7 +94,7 @@
           "value": "zh-CN"
         },
         {
-          "title": "🇨🇳 Chinese Traditional",
+          "title": "🇹🇼 Taiwanese Mandarin",
           "value": "zh-TW"
         },
         {
