--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -180,6 +180,7 @@
 /extensions/opsgenie                                 @ricoberger
 /extensions/parrot-translate                         @Haojen
 /extensions/party-parrot                             @thomaspaulmann
+/extensions/password-generator                       @joshuaiz
 /extensions/paste-without-formatting                 @CheatGZ
 /extensions/pestphp-documentation                    @danyelkeddah
 /extensions/phpmon                                   @nicoverbruggen
