Fetch all paginated AWS resources (#1146)
* feat: recursively load all AWS resources

* chore: add changelog

* chore: add categories

* chore: update changelog format

--- a/extensions/amazon-aws/package.json
+++ b/extensions/amazon-aws/package.json
@@ -10,6 +10,10 @@
     "JonathanWbn",
     "gebeto"
   ],
+  "categories": [
+    "Developer Tools",
+    "Productivity"
+  ],
   "license": "MIT",
   "commands": [
     {
