--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -205,6 +205,7 @@
 /extensions/quick-search                             @iwfan
 /extensions/quick-surf                               @CheatGZ
 /extensions/quicktime                                @pradeepb28
+/extensions/quicktype                                @Aayush9029
 /extensions/radix                                    @peduarte
 /extensions/railway                                  @coffee-cup
 /extensions/raindrop                                 @lardissone
