--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -257,6 +257,7 @@
 /extensions/system-monitor                           @hossammourad
 /extensions/tableplus                                @pernielsentikaer
 /extensions/tailwindcss                              @vimtor
+/extensions/temporary-email                          @natterstefan
 /extensions/terminalfinder                           @yedongze
 /extensions/things                                   @loris
 /extensions/ticktick                                 @viduycheung
