--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -268,6 +268,7 @@
 /extensions/todoist                                  @thomaslombart
 /extensions/toggl-track                              @franzwilhelm
 /extensions/toolbox                                  @kkange
+/extensions/toothpick                                @briankosw
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @FezVrasta
 /extensions/trello                                   @ChrisChinchilla
