--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -220,6 +220,7 @@
 /extensions/reddit-search                            @ewlcheng
 /extensions/remove-background                        @maantje @FezVrasta
 /extensions/render                                   @Destiner
+/extensions/rescuetime-focus-session-trigger         @tuortheblessed
 /extensions/ricescore                                @tonka3000
 /extensions/roblox-games                             @TayIorRobinson
 /extensions/rss-reader                               @fuksman
