--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -183,6 +183,7 @@
 /extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
+/extensions/parcel-tracker                           @jjhok
 /extensions/parrot-translate                         @Haojen
 /extensions/party-parrot                             @thomaspaulmann
 /extensions/password-generator                       @joshuaiz
