--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -179,7 +179,7 @@
 /extensions/notion                                   @HenriChabrand
 /extensions/nsis-reference                           @idleberg
 /extensions/obsidian                                 @marcjulianschwarz
-/extensions/office-quotes                            @braydoncoyer
+/extensions/office-quotes                            @braydoncoyer @sandypockets
 /extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
