--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -216,6 +216,7 @@
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
 /extensions/ray-so                                   @gt-codes @RSO
+/extensions/raycast-wallpaper                        @CheatGZ
 /extensions/raynab                                   @gogocharli
 /extensions/readwise                                 @natterstefan
 /extensions/rebrandly                                @grikomsn
