fix: logseq journal file name (#1338)
* refactor: extract function showGraphPathInvalidToast

* refactor: inline

* feat: parse journal file name format from logseq config

* chord: update lock file

* chord: update lock file

* feat: support tilde path

--- a/extensions/logseq/package.json
+++ b/extensions/logseq/package.json
@@ -25,10 +25,15 @@
       "mode": "view"
     }
   ],
+  "engines": {
+    "node": ">=16.10"
+  },
   "dependencies": {
     "@raycast/api": "^1.31.0",
     "dayjs": "^1.11.0",
-    "ramda": "^0.28.0"
+    "edn-data": "^0.2.0",
+    "ramda": "^0.28.0",
+    "untildify": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
