--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -251,7 +251,7 @@
 /extensions/sourcegraph                              @bobheadxi
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
-/extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers
+/extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers @sandypockets
 /extensions/spotify-player                           @mattisssa
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
