--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -150,6 +150,13 @@
       "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant Helpers",
       "mode": "view"
+    },
+    {
+      "name": "updates",
+      "title": "Updates",
+      "subtitle": "Home Assistant",
+      "description": "Get/Set states of Home Assistant Entity Updates",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -202,7 +209,7 @@
     "Other"
   ],
   "dependencies": {
-    "@raycast/api": "^1.31.0",
+    "@raycast/api": "^1.32.0",
     "home-assistant-js-websocket": "^5.11.1",
     "node-fetch": "^2.6.1",
     "open": "^8.3.0",
