--- a/extensions/gif-search/package.json
+++ b/extensions/gif-search/package.json
@@ -42,6 +42,7 @@
       "required": false,
       "title": "Default Action",
       "description": "Customize what happens when hitting ENTER on a Gif",
+      "default": "copyFile",
       "data": [
         {
           "title": "Copy GIF",
@@ -65,7 +66,7 @@
         },
         {
           "title": "Open in Browser",
-          "value": "openInBrowser"
+          "value": "openUrlInBrowser"
         }
       ]
     },
