[Update Obsidian Extension] Add Daily Note command, restructure code (#1196)
* [ADD] restructure code, add daily note command

* [MOD] prepare for release

* [MOD] ran prettier

* [MOD] detail screen if plugin is not installed

* [ADD] append selected text shortcut

* [MOD] fix typescript check error

* [MOD] update raycast api to 1.31.0, fix file exist

* [ADD] category, changelog, screenshots

* [MOD] prepare for release

* [MOD] title case and add preifx preference

* [MOD] update store screenshots

* [MOD] prepare for release

* [MOD] fix undefined prefix, catch error

--- a/extensions/obsidian/package.json
+++ b/extensions/obsidian/package.json
@@ -1,9 +1,12 @@
 {
   "name": "obsidian",
   "title": "Obsidian",
-  "description": "Search, open, view, copy, paste and edit any note in Obsidian",
+  "description": "Control Obsidian with Raycast",
   "icon": "command-icon.png",
   "author": "marcjulian",
+  "categories": [
+    "Productivity"
+  ],
   "license": "MIT",
   "preferences": [
     {
@@ -17,10 +20,10 @@
   ],
   "commands": [
     {
-      "name": "index",
+      "name": "searchNoteCommand",
       "title": "Search Note",
       "subtitle": "Obsidian",
-      "description": "Search, open, view, copy, paste and edit any note in Obsidian",
+      "description": "Search, open, view, copy, paste and edit any note in Obsidian.",
       "mode": "view",
       "preferences": [
         {
@@ -48,6 +51,13 @@
           "description": "Hide links for copying and viewing notes"
         },
         {
+          "name": "appendPrefix",
+          "type": "textfield",
+          "title": "Prefix for Append action",
+          "required": false,
+          "description": "Specify a prefix for Append action (e.g. '-')"
+        },
+        {
           "name": "primaryAction",
           "type": "dropdown",
           "title": "Primary Action",
@@ -68,14 +78,21 @@
       ]
     },
     {
-      "name": "openvault",
+      "name": "openVaultCommand",
       "title": "Open Vault",
       "subtitle": "Obsidian",
-      "description": "Open a vault in Obsidian",
+      "description": "Open a vault in Obsidian.",
       "mode": "view"
     },
     {
-      "name": "createnote",
+      "name": "dailyNoteCommand",
+      "title": "Daily Note",
+      "subtitle": "Obsidian",
+      "description": "Open daily note in Obsidian. Will create new daily note when it doesn't exist yet.",
+      "mode": "view"
+    },
+    {
+      "name": "createNoteCommand",
       "title": "Create Note",
       "subtitle": "Obsidian",
       "description": "Create new note",
@@ -109,11 +126,11 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.27.0"
+    "@raycast/api": "^1.31.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
-    "@types/react": "^17.0.28",
+    "@types/react": "^17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
