--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -218,6 +218,7 @@
 /extensions/raindrop                                 @lardissone
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
+/extensions/random-password-generator                @textnav
 /extensions/ray-so                                   @gt-codes @RSO
 /extensions/raycast-wallpaper                        @CheatGZ
 /extensions/raynab                                   @gogocharli
