--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -225,6 +225,7 @@
 /extensions/readwise                                 @natterstefan
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
+/extensions/refresh-wifi                             @natterstefan
 /extensions/remove-background                        @maantje @FezVrasta
 /extensions/render                                   @Destiner
 /extensions/rescuetime-focus-session-trigger         @tuortheblessed
