--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -219,7 +219,7 @@
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
 /extensions/random-password-generator                @textnav
-/extensions/ray-so                                   @gt-codes @RSO
+/extensions/ray-so                                   @gt-codes @RSO @dgrzedzielski
 /extensions/raycast-wallpaper                        @CheatGZ
 /extensions/raynab                                   @gogocharli
 /extensions/readwise                                 @natterstefan
