--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -304,6 +304,7 @@
 /extensions/visual-studio-code-project-manager       @MarkusLanger
 /extensions/visual-studio-code-recent-projects       @thomaspaulmann @iainsimmons
 /extensions/vuejs-documentation                      @Dpblandin
+/extensions/vueuse-functions                         @noopurphalak
 /extensions/weather                                  @tonka3000
 /extensions/whatsapp                                 @vimtor
 /extensions/wikipedia                                @vimtor
