--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -128,6 +128,7 @@
 /extensions/hashnode                                 @dpnick
 /extensions/hazeover                                 @ratoru
 /extensions/helm-docs                                @tiagomichaelsousa
+/extensions/heroku                                   @Yukaii
 /extensions/hexlify                                  @gkpln3
 /extensions/homeassistant                            @tonka3000 @altrdev
 /extensions/http-status-codes                        @AlexVanderbist
