--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -229,6 +229,7 @@
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
 /extensions/refresh-wifi                             @natterstefan
+/extensions/remember-the-date                        @pernielsentikaer
 /extensions/remove-background                        @maantje @FezVrasta
 /extensions/render                                   @Destiner
 /extensions/rescuetime-focus-session-trigger         @tuortheblessed
