--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -74,6 +74,7 @@
 /extensions/dex-screener                             @wp-lai
 /extensions/diff-checker                             @Destiner
 /extensions/displayplacer                            @eluce2
+/extensions/dock                                     @pradeepb28
 /extensions/docker                                   @priithaamer
 /extensions/dockerhub                                @k8scat
 /extensions/domainr                                  @Rawnly
