--- a/extensions/github-for-enterprise/package.json
+++ b/extensions/github-for-enterprise/package.json
@@ -66,6 +66,15 @@
       "title": "Token",
       "description": "Your GitHub API token",
       "placeholder": "Enter your personal access token"
+    },
+    {
+      "name": "unsafeHttps",
+      "type": "checkbox",
+      "required": false,
+      "title": "Unsafe HTTPS",
+      "description": "Activate unsafe HTTPS mode for self-signed certificates",
+      "default": false,
+      "label": "Enable"
     }
   ],
   "dependencies": {
