--- a/extensions/github-for-enterprise/package.json
+++ b/extensions/github-for-enterprise/package.json
@@ -5,6 +5,7 @@
   "icon": "icon.png",
   "author": "Kinbaum",
   "license": "MIT",
+  "contributors": ["emanguy"],
   "commands": [
     {
       "name": "issues-create",
