--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -72,6 +72,7 @@
 /extensions/designer-news                            @itsnwa
 /extensions/devdocs                                  @pomdtr
 /extensions/dex-screener                             @wp-lai
+/extensions/dict-cc                                  @natterstefan
 /extensions/diff-checker                             @Destiner
 /extensions/displayplacer                            @eluce2
 /extensions/dock                                     @pradeepb28
