--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -181,6 +181,7 @@
 /extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/nativebase-docs                          @ShubhamVerma1811
+/extensions/netease-music                            @chyroc
 /extensions/netlify                                  @Destiner
 /extensions/nextcloud                                @uetchy
 /extensions/node-js-evaluate                         @selfish
