--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -165,6 +165,7 @@
 /extensions/laravel-nova                             @a-drew
 /extensions/large-type                               @gon250 @FezVrasta
 /extensions/lark                                     @tmkx
+/extensions/lark-applink                             @chyroc
 /extensions/lastfm                                   @eggsy
 /extensions/linguee                                  @geekdada
 /extensions/linux-command                            @jaywcjlove
