--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -158,6 +158,7 @@
 /extensions/kinopoisk                                @mattisssa
 /extensions/kubectx                                  @oktaysenkan
 /extensions/kubernetes-docs                          @rpvsilva
+/extensions/laliga                                   @anhthang
 /extensions/laracasts                                @danyelkeddah
 /extensions/laravel-docs                             @indykoning @indykoning @indykoning
 /extensions/laravel-forge                            @KevinBatdorf @macbookandrew
