feat(todoist): Add new "Search tasks" command (#1394)
* refactor: remove useless import

* docs: use real date

* feat: add base task detail

* feat: add projects info in upcoming view

* fix: show exact time for all tasks

* feat: add many accessories for task

* feat: add action in task detail + improve time displayed

* feat: add empty screens

* fix: only allow dates without time in DatePicker

* feat: support sections in task creation

* feat: make star icon yellow

* feat: add no section in section values

* fix: remove setting initial project id

This caused unexpected bug with a weird onChange behavior.
The project ID has to be selected twice to be properly applied.

* docs: remove useless folder and improve getting started

* feat: revamp action panel and add edit task

* docs: add updates in changelog

* docs: typo

* fix: shortcut for copy to clipboard includes shift

* feat: add search tasks command

* feat: improve schedule options and rename utils file

* refactor: remove unnecessary sections

--- a/extensions/todoist/package.json
+++ b/extensions/todoist/package.json
@@ -25,10 +25,10 @@
       "mode": "view"
     },
     {
-      "name": "projects",
-      "title": "Search Projects",
+      "name": "search",
+      "title": "Search Tasks",
       "subtitle": "Todoist",
-      "description": "See your Todoist projects and tasks by project.",
+      "description": "Search across all your Todoist tasks.",
       "mode": "view"
     },
     {
@@ -36,6 +36,13 @@
       "title": "Create Task",
       "subtitle": "Todoist",
       "description": "Create a Todoist task.",
+      "mode": "view"
+    },
+    {
+      "name": "projects",
+      "title": "Search Projects",
+      "subtitle": "Todoist",
+      "description": "See your Todoist projects and tasks by project.",
       "mode": "view"
     },
     {
