--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -143,7 +143,7 @@
 /extensions/imdb                                     @ryan-exe
 /extensions/inertiajs-documentation                  @danyelkeddah
 /extensions/itch-io                                  @Aayush9029
-/extensions/jetbrains                                @gdsmith
+/extensions/jetbrains                                @gdsmith @gdsmith
 /extensions/jira-search                              @svenwiegand
 /extensions/jisho                                    @dmacdermott
 /extensions/json-format                              @Destiner
