--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -172,6 +172,7 @@
 /extensions/lark                                     @tmkx
 /extensions/lark-applink                             @chyroc
 /extensions/lastfm                                   @eggsy
+/extensions/life-progress                            @CheatGZ
 /extensions/linguee                                  @geekdada
 /extensions/linux-command                            @jaywcjlove
 /extensions/lobsters                                 @dev99problems
