--- a/extensions/bing-wallpaper/package.json
+++ b/extensions/bing-wallpaper/package.json
@@ -14,7 +14,7 @@
     {
       "name": "applyTo",
       "title": "Apply Wallpaper To",
-      "description": "Apply the wallpaper to which Monitor. Valid only when you are using an extended monitor.",
+      "description": "Apply the wallpaper to which monitor. Valid only when you are using an extended monitor.",
       "type": "dropdown",
       "data": [
         {
@@ -76,14 +76,14 @@
   ],
   "commands": [
     {
-      "name": "bing-wallpaper",
+      "name": "set-bing-wallpaper",
       "icon": "bing-wallpaper-icon.png",
       "title": "Set Bing Wallpaper",
       "description": "Get and set Bing wallpapers within 15 days.",
       "mode": "view"
     },
     {
-      "name": "random-wallpaper",
+      "name": "random-bing-wallpaper",
       "icon": "random-wallpaper-icon.png",
       "title": "Random Bing Wallpaper",
       "description": "Set Random Bing wallpapers to desktop.",
@@ -91,7 +91,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.32.1",
+    "@raycast/api": "^1.33.1",
     "fs-extra": "^10.0.1",
     "node-fetch": "^3.2.3",
     "run-applescript": "^6.0.0"
