--- a/extensions/raycast-wallpaper/package.json
+++ b/extensions/raycast-wallpaper/package.json
@@ -20,7 +20,7 @@
       "mode": "view"
     },
     {
-      "name": "roll-raycast-wallpaper",
+      "name": "random-raycast-wallpaper",
       "icon": "random-icon.png",
       "title": "Random Raycast Wallpaper",
       "description": "Set random Raycast wallpapers as desktop wallpaper.",
@@ -31,15 +31,15 @@
     {
       "name": "applyTo",
       "title": "Apply Wallpaper To",
-      "description": "Apply the wallpaper to which screen.",
+      "description": "Apply the wallpaper to which monitor. Valid only when you are using an extended monitor.",
       "type": "dropdown",
       "data": [
         {
-          "title": "Current Desktop",
+          "title": "Current Monitor",
           "value": "current"
         },
         {
-          "title": "Every Desktop",
+          "title": "Every Monitor",
           "value": "every"
         }
       ],
@@ -48,7 +48,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.32.1",
+    "@raycast/api": "^1.33.1",
     "file-url": "^4.0.0",
     "node-fetch": "^3.2.3",
     "run-applescript": "^6.0.0"
